Added a comment re:JabRef and BibDesk

--- a/paper/manuscript.tex
+++ b/paper/manuscript.tex
@@ -75,7 +75,9 @@ Great stuff.
 
 \bibliography{bibliography} % bibliography.bib stores references
 
-\appendix
+Instead of writing the bib file manually, it's best to install JabRef \url{http://www.jabref.org/} , BibDesk or another reference manager to edit the file.
+
+\clearpage \appendix
 
 \section{How to use LaTeX?}
 
