--- a/paper/manuscript.tex
+++ b/paper/manuscript.tex
@@ -192,7 +192,7 @@ To include a citation, enter |\cite{Hill1894}| where Hill1894 is the paper label
 
  \subsection{Some \textbf{important formatting tips}:}
  \begin{compactitem}
- \item \textbf{Each sentence on its own line.} This helps with version control.
+ \item \textbf{Each sentence on its own line.} This helps with version control. LaTeX will ignore a single line-break and format sentences into a single paragraph. (Double line break leaves an empty line in your code, and LaTeX will start a new paragraph.)
 \item Please make sure to use operator notation (with backslashes) when appropriate.\footnote{\url{https://en.wikibooks.org/wiki/LaTeX/Mathematics\#Operators}}
 \item There's a lot of bad advice on how to write matrices. Here's the correct way: \url{https://en.wikibooks.org/wiki/LaTeX/Mathematics\#Matrices_and_arrays}
 \item Mixing text and equations is another sore spot: \url{https://en.wikibooks.org/wiki/LaTeX/Mathematics\#Adding_text_to_equations}
