--- a/paper/manuscript.tex
+++ b/paper/manuscript.tex
@@ -156,8 +156,16 @@ LaTeX (with help of pgfplot) can also create graphs of functions.
      \end{axis}
    \end{tikzpicture}
  \end{figure}
- 
- Figure~\ref{fig:csvfig} was made purely in \LaTeX.\footnote{For more such plots see \url{http://pgfplots.sourceforge.net/gallery.html}}
+
+ \subsection{Syntax-highlighted code}
+ This is how you include some code\footnote{For more see \url{https://www.overleaf.com/learn/latex/Code_listing\#Using_listings_to_highlight_code}.}:
+\begin{lstlisting}[language=Matlab]
+for k = 2:9
+    u[k] = u[k-1] - 2*u[k] + u[k+1];
+end
+\end{lstlisting}
+
+Figure~\ref{fig:csvfig} was made purely in \LaTeX.\footnote{For more such plots see \url{http://pgfplots.sourceforge.net/gallery.html}}
 
 \begin{figure}[htb]
   \centering
@@ -175,24 +183,9 @@ LaTeX (with help of pgfplot) can also create graphs of functions.
 \caption{Graph made directly in LaTeX.}\label{fig:csvfig}
 \end{figure}
 
- \subsection{Syntax-highlighted code}
- This is how you include some code\footnote{For more see \url{https://www.overleaf.com/learn/latex/Code_listing\#Using_listings_to_highlight_code}.}:
-\begin{lstlisting}[language=Matlab]
-for k = 2:9
-    u[k] = u[k-1] - 2*u[k] + u[k+1];
-end
-\end{lstlisting}
-
-\subsection{Citing papers}
-
-References are stored in \texttt{.bib} files. Instead of writing the bib file manually, it's best to install JabRef \url{http://www.jabref.org/} , BibDesk or another reference manager to edit the file.
-
-To include a citation, enter \verb|\cite{Hill1894}| where Hill1894 is the paper label designated in the bib file.
-
-
  \subsection{Some \textbf{important formatting tips}:}
  \begin{compactitem}
- \item \textbf{Each sentence on its own line.} This helps with version control. LaTeX will ignore a single line-break and format sentences into a single paragraph. (Double line break leaves an empty line in your code, and LaTeX will start a new paragraph.)
+ \item \textbf{Each sentence on its own line.} This helps with version control.
 \item Please make sure to use operator notation (with backslashes) when appropriate.\footnote{\url{https://en.wikibooks.org/wiki/LaTeX/Mathematics\#Operators}}
 \item There's a lot of bad advice on how to write matrices. Here's the correct way: \url{https://en.wikibooks.org/wiki/LaTeX/Mathematics\#Matrices_and_arrays}
 \item Mixing text and equations is another sore spot: \url{https://en.wikibooks.org/wiki/LaTeX/Mathematics\#Adding_text_to_equations}
@@ -200,7 +193,6 @@ To include a citation, enter \verb|\cite{Hill1894}| where Hill1894 is the paper 
 \item Annotating parts of equations using braces \url{https://en.wikibooks.org/wiki/LaTeX/Advanced_Mathematics\#Above_and_below}
 \item Never use manual linebreak \verb|\\| in text (outside \verb|align|,\verb|bmatrix| and other similar multiline formula environments). If you think you need it, you're wrong.\footnote{\url{https://en.wikibooks.org/wiki/LaTeX/Paragraph_Formatting\#Manual_breaks}} Instead use an empty line (to break a paragraph), or displayed equations using a pair of \verb|$$| or \verb|\[|,\verb|\]| (preferred).
 \end{compactitem}
-
 
 
 \end{document}
